--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta charset="utf-8" />
+      <meta charset='utf-8' />
       <title>DropDown App</title>
-      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel='stylesheet' type='text/css' href='style.css' />
     </head>
     <body>
-      <div id='infoPanel'>asdfasdfasdfasdfasd
-          <span id='sessionKey'></span>
+      <div id='infoPanel'><h1>DROPDOWN</h1>
+          <span id='sessionKey'></span></span>
         </div>
       <div id='midPanel'>
-          <div id='dropScreen'>
-            <h1>idiot</h1>
-          </div>
-        </div>
-      <div id='bottomPanel'>asdfasdfasdf</div>
+        <form class='dropScreen' method='post' action='http://localhost:3000' enctype='multipart/form-data'>
+          <label type='button'>
+            <h2>Drop</h2>
+            <input id='box' type="file" accept="image/*" />
+          </label>
+        </form>
+      </div>
+    <div id='bottomPanel'>
+      <button form="myform">DROP</button>
+    </div>
   </body>
 </html>
