Added iframe to open when image is dragged

--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,13 @@
   </head>
   <body>
     <div id='popupDOM'>
-      <div id='infoPanel'><h1>DROPDOWN</h1>
+      <div id='infoPanel'><h1>dropdown</h1>
         <span id='sessionKey'></span>
       </div>
       <div id='midPanel'>
         <form class='dropScreen' method='post' action='http://localhost:3000' enctype='multipart/form-data'>
           <label type='button'>
-            <h2>Drop</h2>
-            <input id='toDrop' type='file' accept='image/*' />
+            <img id='droppedImg' src='' />
           </label>
         </form>
       </div>
