content script can send and receive data to the background script

--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,7 @@
       <div id='bottomPanel'>
         <button form='myform'>DROP</button>
       </div>
-      <!-- <script src='./background.js'></script> -->
+      <script src='./background.js'></script>
     </div>
-    <img src='./aaa.png'
   </body>
 </html>
