app uses persistent storage to hold user session information

--- a/popup.html
+++ b/popup.html
@@ -18,9 +18,9 @@
         </form>
       </div>
       <div id='bottomPanel'>
-        <button form='myform'>DROP</button>
+        <button class='dropdownButton' id='currentKey'>Current Key</button>
       </div>
-      <script src='./background.js'></script>
+      <script src='popup.js'></script>
     </div>
   </body>
 </html>
