--- a/popup.html
+++ b/popup.html
@@ -8,17 +8,19 @@
   <body>
     <div id='popupDOM'>
       <div id='infoPanel'><h1>dropdown</h1>
-        <span id='sessionKey'></span>
+        <div id='dropdownSessionInfo'>
+          <p>Name: <span id='dropdownSessionName'></span></p>
+          <span id='dropdownSessionKey' hidden></span>
+        </div>
       </div>
       <div id='midPanel'>
-        <form class='dropScreen' method='post' action='http://localhost:3000' enctype='multipart/form-data'>
-          <label type='button'>
-            <img id='droppedImg' src='' />
-          </label>
-        </form>
+        <input type='text' id='newSessionNameInput' placeholder='…new session name…' value=''/>
       </div>
       <div id='bottomPanel'>
-        <button class='dropdownButton' id='currentKey'>Current Key</button>
+        <div id='dropdownButtons'>
+          <button id='currentKeyButton'>Current Key</button>
+          <button id='newSessionButton'>New Session</button>
+        </div>
       </div>
       <script src='popup.js'></script>
     </div>
