User can fetch current session information and see it in the popup

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       <div id='infoPanel'><h1>dropdown</h1>
         <div id='dropdownSessionInfo'>
           <p>Name: <span id='dropdownSessionName'></span></p>
-          <span id='dropdownSessionKey' hidden></span>
+          <p>Key: <span id='dropdownSessionKey'></span></p>
         </div>
       </div>
       <div id='midPanel'>
@@ -18,7 +18,7 @@
       </div>
       <div id='bottomPanel'>
         <div id='dropdownButtons'>
-          <button id='currentKeyButton'>Current Key</button>
+          <button id='sessionInfo'>Session Info</button>
           <button id='newSessionButton'>New Session</button>
         </div>
       </div>
